# compression

./: ReadMe.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zpf/compression/: FirstPagActivity.kt  SelectPictureLayout.kt
app/src/main/res/layout/: layout_select_picture.xml
app/src/main/res/values/: strings.xml
compress/: bintray.properties  build.gradle
compress/src/main/: AndroidManifest.xml
compress/src/main/java/com/zpf/compress/: AndroidCompressUtil.java  CompressErrorCode.java  CompressManager.java  FileType.java  FileTypeUtil.java
compress/src/main/java/com/zpf/compress/jpglib/: CompressUtil.java
gradle/wrapper/: gradle-wrapper.properties
jpglib/src/main/: AndroidManifest.xml
jpglib/src/main/cpp/: CMakeLists.txt  native-lib.cpp
jpglib/src/main/cpp/jpeg/: jpeglib.h
jpglib/src/main/java/com/zpf/compress/jpglib/: CompressUtil.java
pnglib/: build.gradle
pnglib/src/main/: AndroidManifest.xml
pnglib/src/main/cpp/: CMakeLists.txt  png-lib-bridge.cpp
pnglib/src/main/java/com/zpf/pnglib/: CompressUtil.java
